Fixed (removed) wrapping of .input-with-label elements.
FossilOrigin-Name: b012ecb7143707b29b9ef4d3a1f7698f13713bc443e789a0cb2a79e196b70091

--- a/src/default.css
+++ b/src/default.css
@@ -1116,6 +1116,7 @@ hr {
   margin: 0 0.5em;
   display: inline-block;
   cursor: default;
+  white-space: nowrap;
 }
 .input-with-label > * {
   vertical-align: middle;
